--- a/roles/deployment/templates/docker-compose.yml
+++ b/roles/deployment/templates/docker-compose.yml
@@ -18,7 +18,7 @@ services:
 
   db-apiwater4life:
     image: mariadb
-    container_name: mariadb.api.water4life
+    container_name: {{ db_host }}
     hostname: mariadb-apiwater4life
     restart: always
     networks:
