--- a/roles/deployment/templates/.env
+++ b/roles/deployment/templates/.env
@@ -7,7 +7,7 @@ APP_URL={{ app_url }}
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST={{ db_host }}
+DB_HOST={{ db_container_name }}
 DB_PORT={{ db_port }}
 DB_DATABASE={{ db_name }}
 DB_USERNAME={{ db_user }}
