Added database migration

--- a/roles/deployment/tasks/main.yml
+++ b/roles/deployment/tasks/main.yml
@@ -17,6 +17,7 @@
 - name: "Clone deployment scripts"
   git:
     repo: git@projects.piesoft.net:DWR/Water4Life/API.git
+    version: "{{ branch }}"
     dest: "{{ temporary_dir }}/code"
     accept_hostkey: yes
     key_file: "{{ temporary_dir }}/key/deploy-key"
@@ -59,5 +60,28 @@
   become: true
   become_user: root
 
+- name: "Clean DB data mount dir"
+  file:
+    path: "{{ project_dir }}/db/data"
+    state: absent
+  become: true
+  become_user: root
+
 - name: "Start container with docker-compose"
   shell: docker-compose -f {{ temporary_dir }}/composefile/docker-compose.yml up -d
+
+- name: "Install lib mysql"
+  shell: docker exec {{ php_container_name }} bash -c 'docker-php-ext-install pdo_mysql'
+
+- name: "Waiting for db up 10s ..."
+  pause:
+    seconds: 10
+
+- name: "Migrate DB"
+  shell: docker exec {{ php_container_name }} bash -c 'cd /var/www/html && php artisan migrate'
+
+- name: "Migrate DB rollback"
+  shell: docker exec {{ php_container_name }} bash -c 'cd /var/www/html && php artisan migrate:rollback'
+
+- name: "Refresh DB"
+  shell: docker exec {{ php_container_name }} bash -c 'cd /var/www/html && php artisan migrate:refresh --seed'
