--- a/roles/deployment/tasks/main.yml
+++ b/roles/deployment/tasks/main.yml
@@ -85,3 +85,9 @@
 
 - name: "Refresh DB"
   shell: docker exec {{ php_container_name }} bash -c 'cd /var/www/html && php artisan migrate:refresh --seed'
+
+- name: "Enabled mod_rewrite on apache2"
+  shell: docker exec {{ php_container_name }} bash -c 'a2enmod rewrite'
+
+- name: "Restart service apache2"
+  shell: docker restart {{ php_container_name }}
