--- a/roles/deployment/tasks/main.yml
+++ b/roles/deployment/tasks/main.yml
@@ -86,6 +86,9 @@
 - name: "Refresh DB"
   shell: docker exec {{ php_container_name }} bash -c 'cd /var/www/html && php artisan migrate:refresh --seed'
 
+- name: "Enable Token Generator"
+  shell: docker exec {{ php_container_name }} bash -c 'cd /var/www/html && php artisan passport:install'
+
 - name: "Enabled mod_rewrite on apache2"
   shell: docker exec {{ php_container_name }} bash -c 'a2enmod rewrite'
 
