--- a/roles/deployment/templates/.env
+++ b/roles/deployment/templates/.env
@@ -37,4 +37,11 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
 REDIRECT_HTTPS=true
+
+DB_HOST_DWR_NEWS=202.129.59.68
+DB_PORT_DWR_NEWS=3306
+DB_DATABASE_DWR_NEWS=dwrthai
+DB_USERNAME_DWR_NEWS=piesoft
+DB_PASSWORD_DWR_NEWS="Mobile DWR"
