--- a/roles/deployment/templates/.env
+++ b/roles/deployment/templates/.env
@@ -8,7 +8,7 @@ LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST={{ db_container_name }}
-DB_PORT={{ db_port }}
+DB_PORT=3306
 DB_DATABASE={{ db_name }}
 DB_USERNAME={{ db_user }}
 DB_PASSWORD={{ db_password }}
@@ -40,8 +40,8 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 REDIRECT_HTTPS=true
 
-DB_HOST_DWR_NEWS=202.129.59.68
-DB_PORT_DWR_NEWS=3306
-DB_DATABASE_DWR_NEWS=dwrthai
-DB_USERNAME_DWR_NEWS=piesoft
-DB_PASSWORD_DWR_NEWS="Mobile DWR"
+DB_HOST_DWR_NEWS={{ news_dwr_host }}
+DB_PORT_DWR_NEWS={{ news_dwr_port }}
+DB_DATABASE_DWR_NEWS={{ news_dwr_database }}
+DB_USERNAME_DWR_NEWS={{ news_dwr_user }}
+DB_PASSWORD_DWR_NEWS={{ news_dwr_pass }}
