Add double quote in .env for fix error

--- a/roles/deployment/templates/.env
+++ b/roles/deployment/templates/.env
@@ -44,4 +44,4 @@ DB_HOST_DWR_NEWS={{ news_dwr_host }}
 DB_PORT_DWR_NEWS={{ news_dwr_port }}
 DB_DATABASE_DWR_NEWS={{ news_dwr_database }}
 DB_USERNAME_DWR_NEWS={{ news_dwr_user }}
-DB_PASSWORD_DWR_NEWS={{ news_dwr_pass }}
+DB_PASSWORD_DWR_NEWS="{{ news_dwr_pass }}"
