Change apche config stage

--- a/roles/deployment/tasks/main.yml
+++ b/roles/deployment/tasks/main.yml
@@ -52,11 +52,11 @@
 
 - name: "Sent apache configuration file to server"
   copy:
-    dest: "{{ temporary_dir }}/apache"
+    dest: "{{ temporary_dir }}/apache/"
     src: 000-default.conf
 
 - name: "Move apache configuration file to mount dir"
-  shell: rsync -Pav --delete --recursive {{ temporary_dir }}/apache/ {{ project_dir }}/apache/
+  shell: rsync -Pav --delete --recursive {{ temporary_dir }}/apache {{ project_dir }}/
   become: true
   become_user: root
 
