--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -6,6 +6,8 @@
   with_items:
     - "key"
     - "code"
+    - "composefile"
+    - "apache"
 
 - name: "Create mount directory"
   file:
@@ -13,6 +15,8 @@
     state: directory
   with_items:
     - "code/website"
+    - "apache"
+    - "db"
   become: true
   become_user: root
 
