--- a/roles/deployment/templates/docker-compose.yml
+++ b/roles/deployment/templates/docker-compose.yml
@@ -3,23 +3,19 @@ services:
   web-apiwater4life:
     image: php:7.1-apache
     container_name: {{ php_container_name }}
-    hostname: php-api-water4life
+    hostname: w4l-php
     restart: always
     networks:
       - main
       - apiwater4life
     volumes:
       - {{ project_dir }}/code/website:/var/www/html
-      - {{ project_dir }}/apache:/etc/apache2/sites-availables
-    environment:
-      - VIRTUAL_HOST=demo.api.water4life.piesoft.net
-      - LETSENCRYPT_HOST=demo.api.water4life.piesoft.net
-      - LETSENCRYPT_EMAIL=water4life@piesoft.net
+      - {{ project_dir }}/apache:/etc/apache2/sites-available
 
   db-apiwater4life:
     image: mariadb
     container_name: {{ db_container_name }}
-    hostname: mariadb-apiwater4life
+    hostname: w4l-db
     restart: always
     networks:
       - apiwater4life
