--- a/roles/deployment/tasks/main.yml
+++ b/roles/deployment/tasks/main.yml
@@ -97,6 +97,10 @@
   
 - name: "Set storage-cache-data change own for root is www-data "
   shell: docker exec {{ php_container_name }} bash -c 'chown www-data:www-data -R /var/www/html/storage/framework/cache/data/'
+  
+- name: "Set permission pubilc js path is non access for Security"
+  shell: docker exec {{ php_container_name }} bash -c 'cd /var/www/html && chmod 600 -R /var/www/html/public/js'
+
 
 - name: "Restart service apache2"
   shell: docker restart {{ php_container_name }}
