edit script deploy api

--- a/roles/api/templates/docker-compose.yml
+++ b/roles/api/templates/docker-compose.yml
@@ -1,24 +1,16 @@
 version: "3.5"
 services:
   w4l-api:
-    image: php:7.1-apache
+    image: {{ docker_image }}
     container_name: {{ container_name }}
     hostname: w4l-api
     volumes:
-      - "{{ project_dir }}/api/html:/var/www/html"
+      - "{{ project_dir }}/api/app:/usr/src/app"
     networks:
       - w4l
       - main
-    environment:
-      DB_HOST: "{{ db.container_name }}"
-      DB_PORT: "3306"
-      DB_USERNAME: "{{ db.user }}" 
-      DB_PASSWORD: "{{ db.password }}"
-      DB_DATABASE: "{{ db.database }}"
-      DB_CONNECTION: "mysql"
-      APP_URL: "{{ api_url }}"
-      APP_DEBUG: "false"
     restart: always
+    tty: yes
 
 networks:
   w4l:
