--- a/roles/api/tasks/main.yml
+++ b/roles/api/tasks/main.yml
@@ -1,9 +1,4 @@
 ---
-- name: "Include variable from database roles"
-  include_vars:
-    file: roles/database/vars/main.yml
-    name: db
-
 - name: "Sending docker-compose to server"
   template:
     src: "{{ item }}"
@@ -27,64 +22,30 @@
   git:
     repo: "{{ api_repo }}"
     version: "{{ api_branch }}"
-    dest: "{{ project_dir }}/api/html"
+    dest: "{{ project_dir }}/api/app"
     accept_hostkey: yes
     force: yes
     key_file: "{{ working_dir }}/common/deploy-key"
   become: yes
   become_user: root
 
-- name: "Running composer install"
-  command: docker run --rm -v {{ project_dir }}/api/html:/app -w /app composer install
+- name: "Running npm install"
+  command: docker run --rm -v {{ project_dir }}/api/app:/usr/src/app --name {{ container_name }} -w /usr/src/app {{ docker_image }}
+           npm install
 
-- name: "Dumping auto loader"
-  command: docker run --rm -v {{ project_dir }}/api/html:/app -w /app composer dump-autoload
-
-- name: "Starting API server using docker-compose"
+- name: "Starting service api using docker-compose"
   docker_service:
     project_src: "{{ working_dir }}/api"
     state: present
 
-- name: "Instsalling mysql lib (PDO)"
-  command: docker exec {{ container_name }} bash -c 'docker-php-ext-install pdo_mysql'
+- name: "npm install pm2 version 3.2.2"
+  command: docker exec {{ container_name }} bash -c 'npm install pm2@3.2.2 -g'
 
-- name: "Change owner to www-data:www-data in apache directory"
-  command: docker exec {{ container_name }} bash -c 'chown www-data:www-data -R /var/www/html'
+- name: "Running PM2 Watch"
+  command: docker exec -w /usr/src/app {{ container_name }} bash -c 'pm2 start --name api_dwr npm -- start --watch'
 
-- name: "Create .env to project"
-  command: docker exec {{ container_name }} bash -c 'cd /var/www/html && cp .env.example .env'
+- name: "Running PM2 Startup"
+  command: docker exec -w /usr/src/app {{ container_name }} bash -c 'pm2 startup'
 
-- name: "Migrating database"
-  command: docker exec {{ container_name }} php artisan migrate --force
-
-- name: "Seeding data"
-  command: docker exec {{ container_name }} php artisan db:seed --force
-
-- name: "Generating key"
-  command: docker exec {{ container_name }} php artisan key:generate --force
-
-- name: "Install Passport"
-  command: docker exec {{ container_name }} php artisan passport:install
-
-- name: "Storage path to public"
-  command: docker exec {{ container_name }} php artisan storage:link
-
-- name: "Copying apache2 configuration file out of container"
-  command: docker cp {{ container_name }}:/etc/apache2/sites-available/000-default.conf 
-          {{ working_dir }}/api/
-
-- name: "Adding sub directory to apache2 configuration files"
-  replace:
-    path: "{{ working_dir }}/api/000-default.conf"
-    regexp: 'html'
-    replace: 'html/public'
-    
-- name: "Copying apache2 configuration file to container"
-  command: docker cp {{ working_dir }}/api/000-default.conf 
-          {{ container_name }}:/etc/apache2/sites-available/
-
-- name: "Enabling mod rewirte in apache2"
-  command: docker exec {{ container_name }} a2enmod rewrite
-
-- name: "Reload apache2 config"
-  command: docker exec {{ container_name }} service apache2 reload
+- name: "Running PM2 Save"
+  command: docker exec -w /usr/src/app {{ container_name }} bash -c 'pm2 save'
