--- a/roles/cms/defaults/main.yml
+++ b/roles/cms/defaults/main.yml
@@ -1,2 +1,2 @@
-cms_branch: develop
-cms_repo: "git@git.piesoft.net:DWR/Water4Life/w4l-cubic-vue-cms.git"
+cms_branch: master
+cms_repo: "git@git.piesoft.net:nuioutsource/dwr_cms.git"
