Update all.yml add role service-external service-internal

--- a/all.yml
+++ b/all.yml
@@ -3,6 +3,8 @@
   roles:
     - "common"
     - "database"
+    - "service-external"
+    - "service-internal"
     - "api"
     - "cms"
     - "post-deploy"
