--- a/roles/api/tasks/main.yml
+++ b/roles/api/tasks/main.yml
@@ -22,7 +22,7 @@
   git:
     repo: "{{ api_repo }}"
     version: "{{ api_branch }}"
-    dest: "{{ project_dir }}/api/app"
+    dest: "{{ project_dir }}/api"
     accept_hostkey: yes
     force: yes
     key_file: "{{ working_dir }}/common/deploy-key"
@@ -30,7 +30,7 @@
   become_user: root
 
 - name: "Running npm install"
-  command: docker run --rm -v {{ project_dir }}/api/app:/usr/src/app --name {{ container_name }} -w /usr/src/app {{ docker_image }}
+  command: docker run --rm -v {{ project_dir }}/api:/usr/src/app --name {{ container_name }} -w /usr/src/app {{ docker_image }}
            npm install
 
 - name: "Starting service api using docker-compose"
