--- a/roles/service-external/tasks/main.yml
+++ b/roles/service-external/tasks/main.yml
@@ -22,7 +22,7 @@
   git:
     repo: "{{ service_repo }}"
     version: "{{ service_branch }}"
-    dest: "{{ project_dir }}/service-external/app"
+    dest: "{{ project_dir }}/service-external"
     accept_hostkey: yes
     force: yes
     key_file: "{{ working_dir }}/common/deploy-key"
@@ -30,7 +30,7 @@
   become_user: root
 
 - name: "Running npm install"
-  command: docker run --rm -v {{ project_dir }}/service-external/app:/usr/src/app --name {{ container_name }} -w /usr/src/app {{ docker_image }}
+  command: docker run --rm -v {{ project_dir }}/service-external:/usr/src/app --name {{ container_name }} -w /usr/src/app {{ docker_image }}
            npm install
 
 - name: "Starting service external using docker-compose"
