--- a/all.yml
+++ b/all.yml
@@ -6,6 +6,7 @@
     - "service-external"
     - "service-internal"
     - "service-file"
+    - "service-status"
     - "api"
     - "cms"
     - "post-deploy"
