--- a/roles/service-files/templates/docker-compose.yml
+++ b/roles/service-files/templates/docker-compose.yml
@@ -6,6 +6,10 @@ services:
     hostname: w4l-service-files
     volumes:
       - "{{ project_dir }}/service-files:/usr/src/app"
+    deploy:
+      resources:
+        limits:
+          cpus: '0.15'
     networks:
       - w4l
       - main
