--- a/roles/service-status/templates/docker-compose.yml
+++ b/roles/service-status/templates/docker-compose.yml
@@ -6,6 +6,10 @@ services:
     hostname: w4l-service-status
     volumes:
       - "{{ project_dir }}/service-status:/usr/src/app"
+    deploy:
+      resources:
+        limits:
+          cpus: '0.15'
     networks:
       - w4l
       - main
