--- a/roles/cms/templates/docker-compose.yml
+++ b/roles/cms/templates/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       - "3000:80"
     volumes:
       - "{{ project_dir }}/cms/html:/var/www/html"
-      - "{{ project_dir }}/cms/images:/var/www/html/images"
-      - "{{ project_dir }}/cms/file:/var/www/html/file"
+      - "{{ project_dir }}/cms/images:/var/www/images"
+      - "{{ project_dir }}/cms/file:/var/www/file"
     deploy:
       resources:
         limits:
